Implementing head( ) and tail( )

--- a/pandas_101.ipynb
+++ b/pandas_101.ipynb
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +1010,7 @@
        "NU                          Nunavut   1539   1583   1634"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
        "'province,province_name,2016,2017,2018\\r\\nNL,Newfoundland and Labrador,724,734,750\\r\\nPE,Prince Edward Island,584,601,638\\r\\nNS,Nova Scotia,3060,3138,3201\\r\\nNB,New Brunswick,2741,2814,2956\\r\\nQC,Quebec,21372,22720,23749\\r\\nON,Ontario,21347,21101,21420\\r\\nMB,Manitoba,3531,3675,3965\\r\\nSK,Saskatchewan,1565,1613,1673\\r\\nAB,Alberta,5772,5943,6157\\r\\nBC,British Columbia,6482,6680,6925\\r\\nYT,Yukon,946,973,1006\\r\\nNT,Northwest Territories,1281,1294,1319\\r\\nNU,Nunavut,1539,1583,1634\\r\\n'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1282,7 @@
        "12     1583     1634  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1302,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1459,7 +1459,7 @@
        "12                    Nunavut                    NU   1539   1583   1634"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1482,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1639,7 +1639,7 @@
        "12                    Nunavut       NU   1539   1583   1634"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1649,6 +1649,302 @@
     "fed_sup = fed_sup.rename(columns={'Province Name':'province_name', 'Province Abbreviation':'province'})\n",
     "\n",
     "fed_sup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Working with DataFrames\n",
+    "\n",
+    "## head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>province_name</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>province</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>NL</th>\n",
+       "      <td>Newfoundland and Labrador</td>\n",
+       "      <td>724</td>\n",
+       "      <td>734</td>\n",
+       "      <td>750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PE</th>\n",
+       "      <td>Prince Edward Island</td>\n",
+       "      <td>584</td>\n",
+       "      <td>601</td>\n",
+       "      <td>638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NS</th>\n",
+       "      <td>Nova Scotia</td>\n",
+       "      <td>3060</td>\n",
+       "      <td>3138</td>\n",
+       "      <td>3201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NB</th>\n",
+       "      <td>New Brunswick</td>\n",
+       "      <td>2741</td>\n",
+       "      <td>2814</td>\n",
+       "      <td>2956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>QC</th>\n",
+       "      <td>Quebec</td>\n",
+       "      <td>21372</td>\n",
+       "      <td>22720</td>\n",
+       "      <td>23749</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      province_name   2016   2017   2018\n",
+       "province                                                \n",
+       "NL        Newfoundland and Labrador    724    734    750\n",
+       "PE             Prince Edward Island    584    601    638\n",
+       "NS                      Nova Scotia   3060   3138   3201\n",
+       "NB                    New Brunswick   2741   2814   2956\n",
+       "QC                           Quebec  21372  22720  23749"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# first 5 rows of the DataFrame\n",
+    "prov_support.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>province_name</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>province</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AB</th>\n",
+       "      <td>Alberta</td>\n",
+       "      <td>5772</td>\n",
+       "      <td>5943</td>\n",
+       "      <td>6157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BC</th>\n",
+       "      <td>British Columbia</td>\n",
+       "      <td>6482</td>\n",
+       "      <td>6680</td>\n",
+       "      <td>6925</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>YT</th>\n",
+       "      <td>Yukon</td>\n",
+       "      <td>946</td>\n",
+       "      <td>973</td>\n",
+       "      <td>1006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NT</th>\n",
+       "      <td>Northwest Territories</td>\n",
+       "      <td>1281</td>\n",
+       "      <td>1294</td>\n",
+       "      <td>1319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NU</th>\n",
+       "      <td>Nunavut</td>\n",
+       "      <td>1539</td>\n",
+       "      <td>1583</td>\n",
+       "      <td>1634</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  province_name  2016  2017  2018\n",
+       "province                                         \n",
+       "AB                      Alberta  5772  5943  6157\n",
+       "BC             British Columbia  6482  6680  6925\n",
+       "YT                        Yukon   946   973  1006\n",
+       "NT        Northwest Territories  1281  1294  1319\n",
+       "NU                      Nunavut  1539  1583  1634"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# last 5 rows\n",
+    "prov_support.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>province_name</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>province</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>NL</th>\n",
+       "      <td>Newfoundland and Labrador</td>\n",
+       "      <td>724</td>\n",
+       "      <td>734</td>\n",
+       "      <td>750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PE</th>\n",
+       "      <td>Prince Edward Island</td>\n",
+       "      <td>584</td>\n",
+       "      <td>601</td>\n",
+       "      <td>638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NS</th>\n",
+       "      <td>Nova Scotia</td>\n",
+       "      <td>3060</td>\n",
+       "      <td>3138</td>\n",
+       "      <td>3201</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      province_name  2016  2017  2018\n",
+       "province                                             \n",
+       "NL        Newfoundland and Labrador   724   734   750\n",
+       "PE             Prince Edward Island   584   601   638\n",
+       "NS                      Nova Scotia  3060  3138  3201"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prov_support.head(3)"
    ]
   }
  ],
