Sort rows and columns using sort_index( )

--- a/pandas_101.ipynb
+++ b/pandas_101.ipynb
@@ -2046,21 +2046,27 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## sort_index( )"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prov_support.sort_index(axis=0, ascending=True) # The default order is ascending"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prov_support.sort_index(axis=1, ascending=True)"
+   ]
   }
  ],
  "metadata": {
