--- a/pandas_101.ipynb
+++ b/pandas_101.ipynb
@@ -2067,6 +2067,79 @@
    "source": [
     "prov_support.sort_index(axis=1, ascending=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# type( )\n",
+    "\n",
+    "Indexes are of pandas Index object type:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.indexes.base.Index"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj1 = prov_support.index\n",
+    "\n",
+    "type(obj1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.indexes.base.Index"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj2 = prov_support.columns\n",
+    "\n",
+    "type(obj2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['NL', 'PE', 'NS', 'NB', 'QC', 'ON', 'MB', 'SK', 'AB', 'BC', 'YT', 'NT',\n",
+      "       'NU'],\n",
+      "      dtype='object', name='province')\n",
+      "Index(['province_name', '2016', '2017', '2018'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(obj1); print(obj2)"
+   ]
   }
  ],
  "metadata": {
