Slicing and indexing a DataFrame

--- a/pandas_101.ipynb
+++ b/pandas_101.ipynb
@@ -2145,7 +2145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hierarchical indexes in DataFrames"
+    "# MultiIndex in DataFrames"
    ]
   },
   {
@@ -2254,6 +2254,286 @@
    "source": [
     "df_hierarch.index"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Slicing and indexing\n",
+    "\n",
+    "A column in a DataFrame can be retrieved either by dictionary-like notation using the column's name, or by attribute:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "province\n",
+       "NL    Newfoundland and Labrador\n",
+       "PE         Prince Edward Island\n",
+       "NS                  Nova Scotia\n",
+       "NB                New Brunswick\n",
+       "QC                       Quebec\n",
+       "ON                      Ontario\n",
+       "MB                     Manitoba\n",
+       "SK                 Saskatchewan\n",
+       "AB                      Alberta\n",
+       "BC             British Columbia\n",
+       "YT                        Yukon\n",
+       "NT        Northwest Territories\n",
+       "NU                      Nunavut\n",
+       "Name: province_name, dtype: object"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prov_support['province_name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Here we are using an attribute\n",
+    "prov_support.province_name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The result is the same, in both cases the data is retrieved as a Series object, and in both cases it is exactly the same object. We can confirm it as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prov_support['province_name'] is prov_support.province_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(prov_support['province_name']))\n",
+    "print(type(prov_support.province_name)) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**NOTE**: Retrieving data by column name, e.g. `prov_support['province_name']`, works for any column name, but getting the data by attribute will work only if the column name does not contain any spaces and adheres to Python variable naming rules. For example, this restriction means that we cannot use this approach to access columns which are labelled as years. Years are numbers, and Python variables cannot start with a number:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# ! This will return an error because a number is not a valid Python variable name\n",
+    "\n",
+    "prov_support.2016"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#*  This will always work:\n",
+    "prov_support['2016']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To select multiple columns of data, we need to pass a list of columns. The output will be a DataFrame:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>province_name</th>\n",
+       "      <th>2018</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>province</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>NL</th>\n",
+       "      <td>Newfoundland and Labrador</td>\n",
+       "      <td>750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PE</th>\n",
+       "      <td>Prince Edward Island</td>\n",
+       "      <td>638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NS</th>\n",
+       "      <td>Nova Scotia</td>\n",
+       "      <td>3201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NB</th>\n",
+       "      <td>New Brunswick</td>\n",
+       "      <td>2956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>QC</th>\n",
+       "      <td>Quebec</td>\n",
+       "      <td>23749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ON</th>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>21420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MB</th>\n",
+       "      <td>Manitoba</td>\n",
+       "      <td>3965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SK</th>\n",
+       "      <td>Saskatchewan</td>\n",
+       "      <td>1673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AB</th>\n",
+       "      <td>Alberta</td>\n",
+       "      <td>6157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BC</th>\n",
+       "      <td>British Columbia</td>\n",
+       "      <td>6925</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>YT</th>\n",
+       "      <td>Yukon</td>\n",
+       "      <td>1006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NT</th>\n",
+       "      <td>Northwest Territories</td>\n",
+       "      <td>1319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NU</th>\n",
+       "      <td>Nunavut</td>\n",
+       "      <td>1634</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      province_name   2018\n",
+       "province                                  \n",
+       "NL        Newfoundland and Labrador    750\n",
+       "PE             Prince Edward Island    638\n",
+       "NS                      Nova Scotia   3201\n",
+       "NB                    New Brunswick   2956\n",
+       "QC                           Quebec  23749\n",
+       "ON                          Ontario  21420\n",
+       "MB                         Manitoba   3965\n",
+       "SK                     Saskatchewan   1673\n",
+       "AB                          Alberta   6157\n",
+       "BC                 British Columbia   6925\n",
+       "YT                            Yukon   1006\n",
+       "NT            Northwest Territories   1319\n",
+       "NU                          Nunavut   1634"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prov_support[['province_name', '2018']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
