Slicing using .iloc[ ]

--- a/pandas_101.ipynb
+++ b/pandas_101.ipynb
@@ -2643,7 +2643,46 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## .iloc\n",
+    "\n",
+    ".iloc is used to select rows by integer index, by position"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "province_name    Ontario\n",
+       "2016               21347\n",
+       "2017               21101\n",
+       "2018               21420\n",
+       "Name: ON, dtype: object"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Selecting Ontario by position using .iloc method:\n",
+    "prov_support.iloc[5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Selecting data for Ontario, British Columbia and Quebec by position:\n",
+    "prov_support.iloc[5,9,4]"
+   ]
   }
  ],
  "metadata": {
