Slicing using .isin( )

--- a/pandas_101.ipynb
+++ b/pandas_101.ipynb
@@ -3368,6 +3368,389 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Boolean indexing\n",
+    "\n",
+    "Sometimes there is a need to select data based on a condition, for example, select all rows where federal support in 2018 is greater than 3000. This is called Boolean indexing:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>province_name</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>province</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>NS</th>\n",
+       "      <td>Nova Scotia</td>\n",
+       "      <td>3060</td>\n",
+       "      <td>3138</td>\n",
+       "      <td>3201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>QC</th>\n",
+       "      <td>Quebec</td>\n",
+       "      <td>21372</td>\n",
+       "      <td>22720</td>\n",
+       "      <td>23749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ON</th>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>21347</td>\n",
+       "      <td>21101</td>\n",
+       "      <td>21420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MB</th>\n",
+       "      <td>Manitoba</td>\n",
+       "      <td>3531</td>\n",
+       "      <td>3675</td>\n",
+       "      <td>3965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AB</th>\n",
+       "      <td>Alberta</td>\n",
+       "      <td>5772</td>\n",
+       "      <td>5943</td>\n",
+       "      <td>6157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BC</th>\n",
+       "      <td>British Columbia</td>\n",
+       "      <td>6482</td>\n",
+       "      <td>6680</td>\n",
+       "      <td>6925</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             province_name   2016   2017   2018\n",
+       "province                                       \n",
+       "NS             Nova Scotia   3060   3138   3201\n",
+       "QC                  Quebec  21372  22720  23749\n",
+       "ON                 Ontario  21347  21101  21420\n",
+       "MB                Manitoba   3531   3675   3965\n",
+       "AB                 Alberta   5772   5943   6157\n",
+       "BC        British Columbia   6482   6680   6925"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prov_support[prov_support['2018'] > 3000]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## isin( )\n",
+    "\n",
+    "If there is a list of values that we are looking for within the DataFrame, we can use isin() function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>province_name</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>province</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ON</th>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>21347</td>\n",
+       "      <td>21101</td>\n",
+       "      <td>21420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AB</th>\n",
+       "      <td>Alberta</td>\n",
+       "      <td>5772</td>\n",
+       "      <td>5943</td>\n",
+       "      <td>6157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BC</th>\n",
+       "      <td>British Columbia</td>\n",
+       "      <td>6482</td>\n",
+       "      <td>6680</td>\n",
+       "      <td>6925</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             province_name   2016   2017   2018\n",
+       "province                                       \n",
+       "ON                 Ontario  21347  21101  21420\n",
+       "AB                 Alberta   5772   5943   6157\n",
+       "BC        British Columbia   6482   6680   6925"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# look for rows with indexes 'AB', 'ON' and 'BC':\n",
+    "prov_support[prov_support.index.isin(['AB', 'ON', 'BC'])] #qn explain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explanation\n",
+    "\n",
+    "prov_support.index: This refers to the index of the prov_support DataFrame, which is set to the 'province' column.\n",
+    "\n",
+    ".isin(['AB', 'ON', 'BC']): This method is applied to the index, checking whether each value (province code) in the index is present in the list ['AB', 'ON', 'BC'].\n",
+    "\n",
+    "The result of .isin() is a boolean array with the same length as the index, where each element is True if the corresponding province code is in the list ['AB', 'ON', 'BC'], and False otherwise.\n",
+    "\n",
+    "\n",
+    "So, the boolean mask created by prov_support.index.isin(['AB', 'ON', 'BC']) is a series of boolean values indicating whether each province in the DataFrame is one of 'AB', 'ON', or 'BC'. This mask is then used to filter the DataFrame to include only the rows (provinces) where the mask is True."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>province_name</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>province</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [province_name, 2016, 2017, 2018]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prov_support[prov_support['2017'].isin(['22720', '21101'])] # qn. Is the output just 2 lines?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>province_name</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>province</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ON</th>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>21347</td>\n",
+       "      <td>21101</td>\n",
+       "      <td>21420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BC</th>\n",
+       "      <td>British Columbia</td>\n",
+       "      <td>6482</td>\n",
+       "      <td>6680</td>\n",
+       "      <td>6925</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             province_name   2016   2017   2018\n",
+       "province                                       \n",
+       "ON                 Ontario  21347  21101  21420\n",
+       "BC        British Columbia   6482   6680   6925"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prov_support[(prov_support['2017'] > 6000) & (prov_support.index.isin(['AB', 'ON', 'BC']))]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"Is not\" can be coded using the ~ unary operator:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Selecting rows where support in 2017 does not equal to 6680:\n",
+    "prov_support[~(prov_support['2017'] == 6680)]  # returns all rows except British Columbia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Another way of doing the same thing:\n",
+    "prov_support[prov_support['2017'] != 6680]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
